# metapod-ard

./: CMakeLists.txt  README.md
include/metapod-ard/: body.hh  dynamicrobot.hh  foot.hh  hand.hh  humanoiddynamicrobot.hh  joint.hh  mathsupport.hh
tests/: CMakeLists.txt  common.hh
tests/use_model/: CMakeLists.txt  include_model.hh.cmake  test_rnea.cc
